# movement_controller

./: .env.example  .gitignore  dev_notes.txt  docker-compose.yml  requirements-dev.txt  requirements.txt  sandbox.py  sandbox_launch.py  sandbox_testbench.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  gsd-file-manifest.json  gsd-install-state.json
.github/agents/: gsd-executor.agent.md  gsd-intel-updater.agent.md  gsd-planner.agent.md  gsd-roadmapper.agent.md
.github/get-shit-done/workflows/: complete-milestone.md  discuss-phase.md  execute-phase.md  execute-plan.md  help.md  new-project.md  plan-phase.md  quick.md  reapply-patches.md  resume-project.md  verify-phase.md  verify-work.md
.github/rules/: python-patterns.md  ros2-jazzy.md  simulation.md  testing.md
.github/skills/gsd-complete-milestone/: SKILL.md
.github/skills/gsd-plan-phase/: SKILL.md
.github/skills/gsd-progress/: SKILL.md
.github/skills/gsd-sketch/: SKILL.md
.github/skills/gsd-spike/: SKILL.md
.github/skills/gsd-surface/: SKILL.md
.github/skills/gsd-verify-work/: SKILL.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-package-scaffold-and-interface-definitions/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-REVIEW.md  01-UAT.md  01-VALIDATION.md
.planning/phases/02-lifecycle-node-and-action-server-skeleton/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-RESEARCH.md  02-REVIEW.md
.planning/phases/03-moveit2-pilz-single-path-execution/: .review-fix-recovery-pending.json  03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-PATTERNS.md  03-RESEARCH.md  03-REVIEW-FIX.md  03-REVIEW.md  03-UAT.md
.planning/phases/04-look-ahead-planning-and-blended-multi-path-execution/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-CONTEXT.md  04-PATTERNS.md  04-RESEARCH.md  04-VALIDATION.md
.planning/phases/05-motion-constraints/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-05-PLAN.md  05-05-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  05-RESEARCH.md  05-VALIDATION.md
config/gz/: gui.config
docker/: Dockerfile  ros_entrypoint.sh  startup.sh
src/movement_controller/: .gitignore  CMakeLists.txt  README.md  conftest.py  package.xml  setup.cfg  setup.py
src/movement_controller/action/: ExecuteTrajectory.action
src/movement_controller/config/: joint_constraints.yaml  joint_limits.yaml  moveit_controllers.yaml  pilz_cartesian_limits.yaml  pilz_industrial_motion_planner_planning.yaml
src/movement_controller/launch/: movement_controller.launch.py  ur.launch.py
src/movement_controller/movement_controller/: __init__.py  movement_controller.py  ur_movement_controller.py
src/movement_controller/movement_controller/enums/: __init__.py  circ_type_enum.py  feedback_status_enum.py  motion_type_enum.py
src/movement_controller/movement_controller/exceptions/: __init__.py  abort_planning_error.py  execution_failed_error.py  invalid_start_state_error.py  not_initialized_error.py
src/movement_controller/movement_controller/models/: __init__.py  constraint_config_dto.py  plan_result_dto.py  planning_session_dto.py  trajectory_goal_dto.py  trajectory_path_dto.py
src/movement_controller/movement_controller/services/: __init__.py  pilz_planner_service.py
src/movement_controller/movement_controller/utils/: __init__.py  trajectory_grouper.py
src/movement_controller/msg/: TrajectoryPath.msg
src/movement_controller/scripts/: movement_controller
src/movement_controller/srdf/: ur.srdf.xacro  ur_macro.srdf.xacro
src/movement_controller/srv/: AddObject.srv  AttachObject.srv  DetachObject.srv  ModifyAcm.srv
src/movement_controller/tests/integration/: conftest.py  test_integration_movement_controller.py  test_integration_ur_movement_controller.py  test_moveit_execution_integration.py
src/movement_controller/tests/unit/: test_constraint_config_dto.py  test_enums_and_dtos.py  test_imports.py  test_movement_controller.py  test_pilz_planner_service.py  test_trajectory_grouper.py  test_ur_movement_controller.py
src/ur_gazebo_simulation/: CMakeLists.txt  package.xml
src/ur_gazebo_simulation/config/: initial_positions.yaml  ur_controllers.yaml
src/ur_gazebo_simulation/launch/: ur_sim_control.launch.py
src/ur_gazebo_simulation/model/calibration_board/: calibration_board.material  calibration_board.urdf.xacro  model.config  model.sdf
src/ur_gazebo_simulation/model/tool_mount/: model.config  model.sdf
src/ur_gazebo_simulation/model/tool_mount/meshes/: tool_mount_collision.stl  tool_mount_visual.dae
src/ur_gazebo_simulation/urdf/: ur_gz.ros2_control.xacro  ur_gz.urdf.xacro
src/ur_gazebo_simulation/world/: default.world
