<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>movement_controller</name>
  <version>0.1.0</version>
  <description>
    ROS2 package providing a vendor-agnostic action interface for executing
    collision-aware, blended multi-path trajectories on industrial robot arms
    using MoveIt2 and the PILZ motion planner.
  </description>
  <maintainer email="ron.freimann@ericsson.com">Ron Freimann</maintainer>
  <license>BSD-3-Clause</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Interface generation -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Runtime interface support -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Interface message dependencies -->
  <depend>geometry_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>action_msgs</depend>

  <!-- Python runtime -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-pydantic</exec_depend>

  <!-- MoveIt2 -->
  <exec_depend>moveit_py</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>

  <!-- UR dependencies (UR-01, UR-02) -->
  <exec_depend>ur_robot_driver</exec_depend>
  <exec_depend>ur_moveit_config</exec_depend>
  
  <!-- Marks this package as containing ROS2 interface definitions -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Test dependencies -->
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
